--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "./src/main/main.js",
   "scripts": {
     "start": "electron .",
-    "dev:electron": "NODE_ENV=development electron .",
+    "build": "webpack",
+    "dev": "concurrently pnpm:dev:react pnpm:dev:electron",
+    "dev:electron": "NODE_ENV=development wait-on http://localhost:8080 && electron .",
     "dev:react": "NODE_ENV=development webpack serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,17 +22,32 @@
   },
   "homepage": "https://github.com/samkcarlile/linksync#readme",
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "bootstrap": "^4.5.2",
+    "bootstrap-icons": "^1.0.0",
+    "cheerio": "^1.0.0-rc.3",
+    "easy-peasy": "^3.3.1",
     "express": "^4.17.1",
     "nedb": "^1.8.0",
+    "node-fetch": "^2.6.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-bootstrap": "^1.3.0",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "react-transition-group": "^4.4.1",
+    "regenerator-runtime": "^0.13.7"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
+    "@swc/cli": "^0.1.27",
+    "@swc/core": "^1.2.36",
+    "@swc/helpers": "^0.2.2",
     "babel-loader": "^8.1.0",
+    "concurrently": "^5.3.0",
+    "copy-webpack-plugin": "^6.2.1",
     "css-loader": "^4.3.0",
     "electron": "^10.1.3",
     "eslint": "^7.11.0",
@@ -40,6 +57,9 @@
     "eslint-plugin-react-hooks": "^4.1.2",
     "file-loader": "^6.1.1",
     "style-loader": "^2.0.0",
+    "swc-loader": "^0.1.12",
+    "url-loader": "^4.1.1",
+    "wait-on": "^5.2.0",
     "webpack": "^5.0.0",
     "webpack-cli": "^4.0.0",
     "webpack-dev-server": "^3.11.0"
